--- a/ios/JoinDo/Info.plist
+++ b/ios/JoinDo/Info.plist
@@ -48,5 +48,11 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+
+	<key>UIAppFonts</key>
+<array>
+  <string>FontAwesome.ttf</string>
+</array>
+
 </dict>
 </plist>
